# technical-support-rag-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: 00_project_scope.md  architecture.md  data_strategy.md  dataset_snapshot.md  evaluation_strategy.md  external_eval_dataset_rediscovery.md  external_eval_datasets.md  learning_journal.md  msqa_evaluation_split.md  msqa_schema_probe.md  msqa_stage51_adapter_comparison.md  msqa_stage51_candidate_adapter.md  msqa_stage51_candidate_distribution.md  msqa_stage51_candidate_pool_cap.md  msqa_stage51_changed_case_review.md  msqa_stage51_compatibility.md  msqa_stage51_protocol.md  msqa_topk_baseline.md  primeqa_hybrid_agent_http_transport_validation.md  primeqa_hybrid_agent_integration_failure_review.md  primeqa_hybrid_agent_network_transport_protocol.md  primeqa_hybrid_agent_request_facade_protocol.md  primeqa_hybrid_agent_request_facade_validation.md  primeqa_hybrid_agent_retrieval_integration_protocol.md  primeqa_hybrid_agent_retrieval_integration_validation.md  primeqa_hybrid_agent_runtime_observability_validation.md  primeqa_hybrid_agent_service_entrypoint_protocol.md  primeqa_hybrid_agent_service_entrypoint_validation.md  primeqa_hybrid_agent_tool_orchestration_protocol.md  primeqa_hybrid_agent_tool_workflow_validation.md  primeqa_hybrid_answer_pipeline_error_decomposition.md  primeqa_hybrid_answer_pipeline_error_decomposition_protocol.md  primeqa_hybrid_append_candidate_evidence_shortlist_protocol.md  primeqa_hybrid_append_candidate_evidence_shortlist_selected_config_review.md  primeqa_hybrid_append_candidate_evidence_shortlist_validation.md  primeqa_hybrid_bm25_k1_b_grid.md  primeqa_hybrid_bm25_top10_miss_analysis.md  primeqa_hybrid_bounded_agent_state_protocol.md  primeqa_hybrid_bounded_dynamic_agent_failure_diagnostics.md  primeqa_hybrid_bounded_dynamic_agent_runtime_validation.md  (+98 more)
scripts/: analyze_answer_composition.py  analyze_answer_gap.py  analyze_answer_gap_priorities.py  analyze_bm25_errors.py  analyze_candidate_reranker_errors.py  analyze_candidate_reranker_policy_stability.py  analyze_candidate_score_holdout_changed_cases.py  analyze_evidence_selection.py  analyze_gold_citation_preservation_guards.py  (+174 more)
(+442 files in other folders)
