[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "technical-support-rag-agent"
version = "0.1.0"
description = "Learning-first technical support RAG Agent project using public TechQA-derived datasets."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Icebinge" }]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "typer>=0.12",
]

[project.optional-dependencies]
data = [
  "huggingface-hub>=0.24",
  "tqdm>=4.66",
]
rag = [
  "rank-bm25>=0.2.2",
  "scikit-learn>=1.4",
  "sentence-transformers>=3.0",
]
agent = [
  "langchain>=0.3",
  "langgraph>=0.2",
  "langchain-community>=0.3",
]
app = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
